# arnis-roblox

./: .editorconfig  .gitignore  .gitleaks.toml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  SECURITY.md
.githooks/: pre-push
docs/: acceptance_criteria.md  architecture.md  arnis-mapping.md  backlog.md  build-pipeline.md  chunk_schema.md  data-assets.md  exporter-fixtures.md  performance-budget.md  remote-studio-development.md  studio_mcp_playbook.md  vertigo-sync-boundary.md
roblox/: .harness.build.project.json  .harness.serve.project.json  README.md  arnis_roblox.yml  default.build.project.json  default.project.json  plugin.project.json  selene.toml
rust/: Cargo.toml  README.md
rust/crates/arbx_cli/: Cargo.toml
rust/crates/arbx_cli/src/: main.rs
rust/crates/arbx_geo/: Cargo.toml
rust/crates/arbx_geo/src/: lib.rs  satellite.rs
rust/crates/arbx_pipeline/: Cargo.toml
rust/crates/arbx_pipeline/src/: lib.rs  overpass_client.rs  overture.rs
rust/crates/arbx_roblox_export/: Cargo.toml
rust/crates/arbx_roblox_export/examples/: export_sample.rs
rust/crates/arbx_roblox_export/src/: chunker.rs  lib.rs  manifest.rs  manifest_store.rs  materials.rs  subplans.rs
rust/crates/arbx_roblox_export/tests/: integration.rs  subplans.rs
rust/data/: austin_overpass.json
rust/fuzz/: Cargo.toml
rust/fuzz/fuzz_targets/: subplan_chunk_ref.rs
scripts/: bootstrap_arnis_studio.py  bootstrap_vsync_place.py  build_austin_max_fidelity_place.sh  check_scaffold.py  export_austin_from_osm.sh  export_austin_to_lua.sh  fetch_osm_overpass.py  fetch_overture_buildings.py  generate_harness_projects.py  generate_synthetic_manifest.py  install_git_hooks.py  install_repo_audit_tools.sh  json_manifest_to_lua.py  json_manifest_to_sharded_lua.py  manifest_quality_audit.py  preview_telemetry_summary.py  refresh_preview_from_sample_data.py  refresh_runtime_harness_from_sample_data.py  remote_studio_profiles.example.sh  repo_audit.py  run_all_checks.py  run_austin_fidelity.sh  run_austin_stress.py  run_rust_fuzz.py  run_studio_harness.sh  run_studio_harness_remote.sh  scene_fidelity_audit.py  setup_remote_dev_machine.sh  studio_harness_policy.py  (+5 more)
(+8496 files in other folders)
