[workspace]
members = [
    "crates/arbx_geo",
    "crates/arbx_pipeline",
    "crates/arbx_roblox_export",
    "crates/arbx_cli",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
authors = ["OpenAI scaffold generator"]

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
