[package]
name = "arbx_cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
arbx_roblox_export = { path = "../arbx_roblox_export" }
arbx_pipeline = { path = "../arbx_pipeline" }
arbx_geo = { path = "../arbx_geo" }
serde_json.workspace = true
rayon.workspace = true

[dev-dependencies]
tempfile = "3.10"

[[bin]]
name = "arbx_cli"
path = "src/main.rs"
